Vertical and horizontal scroll happening at the same time
Hi!
While testing an unrelated MR, I noticed that while scrolling vertically, horizontal scroll was also send to XWayland apps.
Scrolling down also scrolls to the right. Scroll up also scroll to the left.
I used GDK_BACKEND=x11 gnome-system-monitor
for testing.
After bisecting the bug, the first bad commit is e37eeb7a
I'm running XWayland in a VM. I hope this doesn't affect the end result.
cc @djacewicz